various fixes: a small error in XO.js: game over line sometimes was drawn between wrong pieces fixed some colors and some layout issues

--- a/media/css/colors.css
+++ b/media/css/colors.css
@@ -32,7 +32,12 @@
   text-align: center;
 }
 
-#footer a:link
+#header a:link, #header a:visited
+{
+  color: #4f737f;
+}
+
+#footer a:link, #footer a:visited
 {
   color:#5a860c;
 }
