--- a/media/css/layout-centered.css
+++ b/media/css/layout-centered.css
@@ -43,14 +43,13 @@
 }
 #header
 { 
-  position: relative;
+  width: 100%;
   height: 30px; /*height of header*/
   padding-top: 5px;
 }
 #footer
 { 
-  position: relative;
-  clear: left;
+  clear: both;
   width: 100%;
-  padding: 5px 0;
+  padding-top: 5px;
 }
